Adjusting the directive in tablet and margin issue on Mobile

--- a/fortune-cookie/2014-09-19/mobile/scss/style.scss
+++ b/fortune-cookie/2014-09-19/mobile/scss/style.scss
@@ -55,8 +55,8 @@ a img {
 	}
 	.help{
 		position: absolute;
-		top: 20px;
-		right: 3.33333333333%;//20px;
+		top: 21px;
+		right: 3.5%;//21px;
 		width: 245px;
 	}
 	.cookie{
@@ -146,7 +146,7 @@ a img {
 		position: absolute;
 		right: 0;
 		bottom: 20px;
-		width: 277px;
+		width: 275px;
 	}
 	.modal{
 		display: none;
